[gd_scene load_steps=4 format=3 uid="uid://by7a4rq1eusjw"]

[ext_resource type="Script" path="res://script/main/editor_object.gd" id="2_7078m"]
[ext_resource type="PackedScene" uid="uid://d20syjsw3p1bx" path="res://scenes/main/hardware_select.tscn" id="2_uxi3r"]
[ext_resource type="ButtonGroup" uid="uid://2g4dwd8ehiad" path="res://groups/buttons.tres" id="3_s3jdp"]

[node name="editor" type="Node2D"]

[node name="Floor" type="Node2D" parent="."]

[node name="floor_image" type="Sprite2D" parent="Floor"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_right = 0.279
anchor_bottom = 1.0
offset_right = -321.408
offset_bottom = -648.0

[node name="left_dark" type="ColorRect" parent="CanvasLayer/menu"]
layout_mode = 0
offset_right = 318.0
offset_bottom = 649.0
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="left" type="ColorRect" parent="CanvasLayer/menu"]
layout_mode = 0
offset_right = 313.0
offset_bottom = 650.0
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="save" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 6.0
offset_top = 556.0
offset_right = 156.0
offset_bottom = 598.0
theme_override_font_sizes/font_size = 13
text = "Сохранить кнопку"

[node name="search" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 556.0
offset_right = 308.0
offset_bottom = 598.0
theme_override_font_sizes/font_size = 13
text = "Сохранить имя кнопки"
text_overrun_behavior = 2

[node name="drop" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 6.0
offset_top = 600.0
offset_right = 156.0
offset_bottom = 642.0
theme_override_font_sizes/font_size = 13
text = "Удалить данные кнопки"
text_overrun_behavior = 2

[node name="delete" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 600.0
offset_right = 308.0
offset_bottom = 642.0
theme_override_font_sizes/font_size = 13
text = "Удалить кнопку"

[node name="model" type="LineEdit" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 452.0
offset_right = 308.0
offset_bottom = 482.0
theme_override_font_sizes/font_size = 11

[node name="floors" type="OptionButton" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 261.0
offset_right = 308.0
offset_bottom = 289.0
theme_override_font_sizes/font_size = 13
item_count = 6
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3
popup/item_4/text = "5"
popup/item_4/id = 4
popup/item_5/text = "6"
popup/item_5/id = 5

[node name="button_name" type="LineEdit" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 292.0
offset_right = 308.0
offset_bottom = 321.0
theme_override_font_sizes/font_size = 13

[node name="cabinet" type="LineEdit" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 324.0
offset_right = 308.0
offset_bottom = 353.0
theme_override_font_sizes/font_size = 13

[node name="spot" type="LineEdit" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 356.0
offset_right = 308.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 13

[node name="number" type="LineEdit" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 387.0
offset_right = 308.0
offset_bottom = 416.0
theme_override_font_sizes/font_size = 13

[node name="pc_name" type="LineEdit" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 419.0
offset_right = 308.0
offset_bottom = 449.0
theme_override_font_sizes/font_size = 13

[node name="Label" type="Label" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 44.0
offset_top = 266.0
offset_right = 155.0
offset_bottom = 289.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Этаж:"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 43.0
offset_top = 298.0
offset_right = 154.0
offset_bottom = 321.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Кнопка:"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 44.0
offset_top = 331.0
offset_right = 155.0
offset_bottom = 354.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Кабинет:"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 43.0
offset_top = 360.0
offset_right = 154.0
offset_bottom = 383.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Место:"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 27.0
offset_top = 389.0
offset_right = 155.0
offset_bottom = 412.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Серийный номер:"
horizontal_alignment = 2

[node name="Label6" type="Label" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 44.0
offset_top = 456.0
offset_right = 155.0
offset_bottom = 479.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Модель:"
horizontal_alignment = 2

[node name="Label8" type="Label" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 20.0
offset_top = 423.0
offset_right = 153.0
offset_bottom = 446.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Имя ПК:"
horizontal_alignment = 2

[node name="exit" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 308.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 25
text = "Выйти"

[node name="load_image" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 6.0
offset_top = 67.0
offset_right = 177.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 10
text = "Загрузить 
изображение"

[node name="load_floor" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 6.0
offset_top = 106.0
offset_right = 177.0
offset_bottom = 142.0
theme_override_font_sizes/font_size = 10
text = "Загрузить
планировку"

[node name="save_floor" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 181.0
offset_top = 67.0
offset_right = 308.0
offset_bottom = 142.0
theme_override_font_sizes/font_size = 14
text = "Сохранить этаж"

[node name="saved" type="Label" parent="CanvasLayer/menu"]
visible = false
layout_mode = 0
offset_left = 112.0
offset_top = 523.0
offset_right = 200.0
offset_bottom = 546.0
theme_override_colors/font_color = Color(0, 0.92549, 0, 1)
text = "Сохранено"

[node name="error" type="Label" parent="CanvasLayer/menu"]
visible = false
layout_mode = 0
offset_left = 118.0
offset_top = 523.0
offset_right = 187.0
offset_bottom = 546.0
theme_override_colors/font_color = Color(0.929412, 0.0627451, 0, 1)
text = "Ошибка"

[node name="Timer" type="Timer" parent="CanvasLayer/menu"]
wait_time = 3.0

[node name="prev_btn" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 6.0
offset_top = 486.0
offset_right = 156.0
offset_bottom = 517.0
disabled = true
text = "<<"

[node name="next_btn" type="Button" parent="CanvasLayer/menu"]
layout_mode = 0
offset_left = 159.0
offset_top = 486.0
offset_right = 308.0
offset_bottom = 517.0
disabled = true
text = ">>"

[node name="confirm_drop" type="Node2D" parent="CanvasLayer/menu"]
visible = false

[node name="cd_dark" type="ColorRect" parent="CanvasLayer/menu/confirm_drop"]
offset_left = 579.0
offset_top = 166.0
offset_right = 887.0
offset_bottom = 370.0
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/menu/confirm_drop"]
offset_left = 585.0
offset_top = 172.0
offset_right = 880.0
offset_bottom = 364.0
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="cancel_drop" type="Button" parent="CanvasLayer/menu/confirm_drop"]
offset_left = 587.0
offset_top = 308.0
offset_right = 732.0
offset_bottom = 362.0
text = "Отклонить"

[node name="confirm_drop" type="Button" parent="CanvasLayer/menu/confirm_drop"]
offset_left = 735.0
offset_top = 308.0
offset_right = 878.0
offset_bottom = 362.0
text = "Подтвердить"

[node name="Label" type="Label" parent="CanvasLayer/menu/confirm_drop"]
offset_left = 595.0
offset_top = 177.0
offset_right = 872.0
offset_bottom = 243.0
theme_override_colors/font_color = Color(0.745098, 0.745098, 0.745098, 1)
theme_override_font_sizes/font_size = 20
text = "Вы уверены, что хотите удалить данные с кнопки {} ?"
autowrap_mode = 2

[node name="confirm_delete" type="Node2D" parent="CanvasLayer/menu"]
visible = false

[node name="c_d_dark" type="ColorRect" parent="CanvasLayer/menu/confirm_delete"]
offset_left = 579.0
offset_top = 166.0
offset_right = 887.0
offset_bottom = 370.0
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/menu/confirm_delete"]
offset_left = 585.0
offset_top = 172.0
offset_right = 880.0
offset_bottom = 364.0
color = Color(0.313726, 0.313726, 0.313726, 1)

[node name="cancel_delete" type="Button" parent="CanvasLayer/menu/confirm_delete"]
offset_left = 587.0
offset_top = 308.0
offset_right = 732.0
offset_bottom = 362.0
text = "Отклонить"

[node name="confirm_delete" type="Button" parent="CanvasLayer/menu/confirm_delete"]
offset_left = 735.0
offset_top = 308.0
offset_right = 878.0
offset_bottom = 362.0
text = "Подтвердить"

[node name="Label" type="Label" parent="CanvasLayer/menu/confirm_delete"]
offset_left = 595.0
offset_top = 177.0
offset_right = 870.0
offset_bottom = 236.0
theme_override_colors/font_color = Color(0.74698, 0.74698, 0.74698, 1)
theme_override_font_sizes/font_size = 20
text = "Вы уверены, что хотите удалить кнопку {} ?"
autowrap_mode = 3

[node name="hardware_select" parent="CanvasLayer/menu" instance=ExtResource("2_uxi3r")]
offset_top = 67.0
offset_bottom = 67.0

[node name="FileDialog" type="FileDialog" parent="CanvasLayer/menu/hardware_select"]
position = Vector2i(460, 160)
size = Vector2i(407, 400)
access = 2
show_hidden_files = true

[node name="FileDialog2" type="FileDialog" parent="CanvasLayer/menu/hardware_select"]
position = Vector2i(460, 160)
size = Vector2i(407, 400)
access = 2
show_hidden_files = true

[node name="editor_object" type="Node2D" parent="."]
script = ExtResource("2_7078m")
group = ExtResource("3_s3jdp")

[node name="Sprite2D" type="Sprite2D" parent="editor_object"]

[node name="cam_container" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="cam_container"]

[connection signal="mouse_entered" from="CanvasLayer/menu/left_dark" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/left_dark" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/left" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/left" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/save" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/save" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/save" to="editor_object" method="_on_save_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/search" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/search" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/search" to="editor_object" method="_on_search_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/drop" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/drop" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/drop" to="editor_object" method="_on_drop_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/delete" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/delete" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/delete" to="editor_object" method="_on_delete_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/floors" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/floors" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/button_name" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/button_name" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/cabinet" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/cabinet" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/spot" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/spot" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/number" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/number" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/pc_name" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/pc_name" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/exit" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/exit" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/exit" to="editor_object" method="_on_exit_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/load_image" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/load_image" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/load_image" to="editor_object" method="_on_load_image_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/load_floor" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/load_floor" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/load_floor" to="editor_object" method="_on_load_floor_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/save_floor" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/save_floor" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/save_floor" to="editor_object" method="_on_save_floor_pressed"]
[connection signal="timeout" from="CanvasLayer/menu/Timer" to="editor_object" method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/menu/prev_btn" to="editor_object" method="_on_prev_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/menu/next_btn" to="editor_object" method="_on_next_btn_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_drop/cd_dark" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_drop/cd_dark" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_drop/ColorRect2" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_drop/ColorRect2" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_drop/cancel_drop" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_drop/cancel_drop" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/confirm_drop/cancel_drop" to="editor_object" method="_on_cancel_drop_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_drop/confirm_drop" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_drop/confirm_drop" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/confirm_drop/confirm_drop" to="editor_object" method="_on_confirm_drop_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_delete/c_d_dark" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_delete/c_d_dark" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_delete/ColorRect2" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_delete/ColorRect2" to="editor_object" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_delete/cancel_delete" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_delete/cancel_delete" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/confirm_delete/cancel_delete" to="editor_object" method="_on_cancel_delete_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/confirm_delete/confirm_delete" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/confirm_delete/confirm_delete" to="editor_object" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/menu/confirm_delete/confirm_delete" to="editor_object" method="_on_confirm_delete_pressed"]
[connection signal="confirmed" from="CanvasLayer/menu/hardware_select/FileDialog" to="editor_object" method="_on_folder_confirmed"]
[connection signal="mouse_entered" from="CanvasLayer/menu/hardware_select/FileDialog" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/hardware_select/FileDialog" to="editor_object" method="_on_mouse_exited"]
[connection signal="confirmed" from="CanvasLayer/menu/hardware_select/FileDialog2" to="editor_object" method="_folder_confirm"]
[connection signal="mouse_entered" from="CanvasLayer/menu/hardware_select/FileDialog2" to="editor_object" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/menu/hardware_select/FileDialog2" to="editor_object" method="_on_mouse_exited"]
